--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,22 @@
 body {
-	background-image: url("blue1.jpg");
-  background-repeat: no-repeat;
+	background-image: url("faae0.jpeg");
+	  background-repeat: no-repeat;
   background-size: cover
-  
 }
-table {
-	text-align:center;
-}
-
-
-
 
 img {
   border: 1px solid #ddd;
   border-radius: 4px;
   padding: 5px;
-  width: 150px;
-}
+  width: 350px;
 
-img:hover {
+
+
+
+img:hover 
+{	
+
+#menu a{
+		padding:10xp
 	
+}
